--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "pruebasconsass",
+  "name": "es-tattoo-and-art",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "pagina web para estudio de tatuajes ES Tattoo & Art",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-css": "node-sass --include-path scss scss/style.scss css/style.css",
     "watch-css": "nodemon -e scss -x \"npm  run build-css\""
   },
-  "author": "",
+  "author": "Nicole Marenco",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.1",
